--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
 
 </head>
 <body>
-  <header class="image-init">
-    <div class="container">
-      <img src="images/image-product-mobile.jpg" alt="">
-    </div>
-  </header>
-
-  <div class="contenedor">
-    <h4>PERFUME</h4>
-    <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
-    <p class="paragraph">
-      A floral, solar and voluptuous interpretation composed by Olivier Polge,
-      Perfumer-Creator for the House of CHANEL.
-    </p>
-    <span class="price1">$149.99</span>
-    <span class="price2">$169.99</span>
-    <br>
-    <div class="add">
-      <object data="images/icon-cart.svg" type="" class="svg"></object>
-      <span class="Add">Add to Cart</span>
+  <div class="card">
+    <header class="image-init">
+      <div class="container">
+        <img src="images/image-product-mobile.jpg" alt="">
+      </div>
+    </header>
+    <div class="contenedor">
+      <h4>PERFUME</h4>
+      <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+      <p class="paragraph">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.
+      </p>
+      <span class="price1">$149.99</span>
+      <span class="price2">$169.99</span>
+      <br>
+      <div class="add">
+        <object data="images/icon-cart.svg" type="" class="svg"></object>
+        <span class="Add">Add to Cart</span>
+      </div>
     </div>
   </div>
   
